[project]
name = "finalproject-dorofeev-konstantin-m25-555"
version = "0.1.0"
description = ""
authors = [
    {name = "Dorofeev Konstantin", email = "konstantin@yandex.ru"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "prettytable (>=3.9.0,<4.0.0)",
    "requests (>=2.32.5,<3.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [
    { include = "valutatrade_hub" },
]

[tool.poetry.scripts]
valutatrade = "valutatrade_hub.cli.interface:main"


[tool.poetry.group.dev.dependencies]
ruff = "^0.14.2"

[tool.ruff]
line-length = 88
target-version = "py312"
exclude = ["venv", ".venv", "dist", "__pycache__"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []